css/styles.css
html {
    font-size: 100%;
}

body {
    overflow-x: hidden;
    background-color: #1A1A1A;
    color: white;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin: 70px 0px 0px;
}

main {
    margin-left: 10px;
}

/* =====================
    Navbar
===================== */
nav {
    top: 0;
    width: 100%;
    display: block;
    position: fixed;
    z-index: 99;
    background: linear-gradient(to right, rgb(108, 60, 140), green);
}

nav ul {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.1em;
    margin: auto;
    list-style: none;
}

nav ul li {
    margin: 1em 1.5em;
}

a {
    color: white;
    text-decoration: none;
    padding: 1.1em;
}

a:hover {
    text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
    0px 0px 20px #b393d3;
}

/* =====================
    Mobile menu
===================== */
.menu-toggle {
    display: none;
    background: none;
    border: none;
    color: white;
    font-size: 2rem;
    padding: 0.5em 1em;
    cursor: pointer;
}

.menu-toggle:active,
.menu-toggle:focus {
    background: none;
    outline: none;
    box-shadow: none;
}

/* Mobile */
@media (max-width: 768px) {
    .menu-toggle {
        display: block;
    }

    nav ul {
        flex-direction: column;
        display: none;
        width: 100%;
        align-items: center;
        margin: 0;
        padding: 0;
    }

    nav ul.open {
        display: flex;
    }

    nav ul li {
        margin: 1em 0;
        width: 100%;
        text-align: center;
    }
}

/* =====================
    Section
===================== */
section h1 {
    font-size: 2em;
    font-weight: 500;
    text-align: center;
    margin-top: 8em;
    margin-bottom: 1.7em;
    /*text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
    0px 0px 20px #b393d3;*/
}

@media (max-width: 600px) {
    section h1 {
        margin-top: 2em;
        font-size: 1.5em;
    }
}

/* ====================
    About
=====================*/
#about {
    margin: 6em auto;
    padding: 0 1em;
    font-family: monospace;
}

#about-flex {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    max-width: 700px;
}

#image-box {
    margin: 4em -2em 10em auto;
    width: 200px;
    height: 200px;
}

#image-box img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#about-box {
    width: 100%;
    max-width: 500px;
    background-color: #212121;
    padding: 1em;
    margin: 3em auto;
    border-radius: 8px;
    box-shadow: 5px 5px 10px #000000;
    font-size: 1.2em;
}

#pname {
    color: #4A7FAA;
}

#pwing {
    color: #F3CD02;
}

#pblue {
    color: #85B9D4;
}

#pblue #spanred {
    color: #B0806D;
}

#pblue span {
    color: white;
}

#pblue #spangreen {
    color: #9AAF90;
}

@media (max-width: 768px) {
    #about-flex {
        flex-direction: column;
        text-align: left;
    }

    #image-box {
        margin: 0 auto 1em;
    }

    #image-box img {
        margin-top: 3em;
    }
}

/* ======================
    Contact information
===================== */
#contact {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: -1em;
}

#contact a {
    padding: 0em;
    font-size: 50px;
    margin: 0.2em;
    background-color: transparent;
}

/* =====================
    Skills 
===================== */
#skillswrap {
    display: grid;
    grid-template-columns: 1fr 1fr;
    /*flex-wrap: wrap;
    justify-content: center;*/
    margin: auto;
    max-width: 1000px;
}

#skillstext {
    margin: 0 1em;
}

#skillsdiv {
    font-family: monospace;
    background-color: #212121;
    padding: 1em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: auto;
}

#skillsdiv div {
    padding: 1em 2em;
    /*background-color: #212121;
    border-radius: 6px;
    box-shadow: 5px 5px 10px #000000;
    margin: 1em;*/
}

@media (max-width: 768px) {
    #skillswrap {
        grid-template-columns: 1fr;
    }
}

/* =====================
    Projects
===================== */
.projectSlideshow {
    background-color: #212121;
    color: white;
    width: 95%;
    max-width: 800px;
    margin: 2em auto;
    padding: 2em;
    border-radius: 8px;
    box-shadow: 5px 5px 10px #000000;
    position: relative;
}

.project {
    display: none;
}

.project img {
    max-width: 100%;
    height: auto;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.next {
    right: 0;
    margin-right: 0.3em;
}

.prev {
    left: 0;
    margin-left: 0.3em;
}

.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}

.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: #717171;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

#proj-img img {
    margin: 1em;
}

#projects a {
    padding: 0em;
    color: white;
    font-weight: bold;
}

#projects a:hover {
    color: white;
    background-color: transparent;
}

button {
    padding: 0.8em 1.2em;
    margin: auto;
    background-color: #1A1A1A;
    border-style: solid;
    border-width: 0px;
    border-radius: 30px;
    font-size: 1em;
    font-weight: 700;
    color: #b393d3;
}

button:hover {
    color: white;
    background-color: #b393d3;
}

.projSkill {
    background-color: lightgray;
    color: black;
    padding: 5px;
    border-radius: 3px;
    margin: 0 0.5em 0 0;
}

/* ---- Timeline w education and work experience ---- */
* {
    box-sizing: border-box;
}
/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: white;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
}

/* Container around content */
.container {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
}

/* The circles on the timeline */
.container::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: black;
    border: 4px solid green;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}

/* Place the container to the left */
.left {
    left: 0;
}

/* Place the container to the right */
.right {
    left: 50%;
}

/* Add arrows to the left container (pointing right) */
.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid #212121;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent #212121;
}

/* Add arrows to the right container (pointing left) */
.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid #212121;
    border-width: 10px 10px 10px 0;
    border-color: transparent #212121 transparent transparent;
}

/* Fix the circle for containers on the right side */
.right::after {
    left: -16px;
}

/* The actual content */
.content {
    padding: 20px 30px;
    background-color: #212121;
    color: white;
    position: relative;
    border-radius: 6px;
}

/* Media queries - Responsive timeline on screens less than 600px wide */
@media screen and (max-width: 600px) {
/* Place the timelime to the left */
    .timeline::after {
        left: 31px;
    }

    /* Full-width containers */
    .container {
        width: 100%;
        padding-left: 70px;
        padding-right: 25px;
    }

    /* Make sure that all arrows are pointing leftwards */
    .container::before {
        left: 60px;
        border: medium solid #212121;
        border-width: 10px 10px 10px 0;
        border-color: transparent #212121 transparent transparent;
    }

    /* Make sure all circles are at the same spot */
    .left::after, .right::after {
        left: 15px;
    }

    /* Make all right containers behave like the left ones */
    .right {
        left: 0%;
    }
}

